ci(docs_test):  test with different branch glob syntax
'docs/*' recognizes `docs/doc_build_test_2',
but not `docs/doc-build-test`.

--- a/.github/workflows/build_docs_test.yml
+++ b/.github/workflows/build_docs_test.yml
@@ -10,7 +10,7 @@ on:
       - 'scripts/find_version.sh'
   push:
     branches:
-      - 'docs/*'
+      - 'docs/**'
       - master
       - 'release/*'
     paths:
