--- a/.github/workflows/build_docs_test.yml
+++ b/.github/workflows/build_docs_test.yml
@@ -10,8 +10,7 @@ on:
       - 'scripts/find_version.sh'
   push:
     branches:
-      - 'docs/**'
-      - 'docs/*-*-*'
+      - 'docs/*'
       - master
       - 'release/*'
     paths:
